--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Newsletter sign-up form with success message</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -24,12 +24,12 @@
       </ul>
 
 
-      <form>
+      <form novalidate>
         <div class="flex-container">
           <p>Email address</p>
           <span class="error">Valid email required</span>
         </div>
-        <input type="email" name="email" id="email" placeholder="example@company.com" required> 
+        <input type="email" name="email" id="email" placeholder="example@company.com"> 
         <button class="btn">Subscribe to monthly newsletter</button>
       </form>
       </div>
