--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       </div>
 
       <div class="container2">
-        <img src="./images/illustration-sign-up-desktop.svg" alt="a really cool img">
+        <img class="desktop" src="./images/illustration-sign-up-desktop.svg" alt="a really cool img">
+        <img  class="responsive" src="./images/illustration-sign-up-mobile.svg" alt="a really cool img">
       </div>
     </div>
 
